test/classes/errors/nilability-assign/assign-nonnil-borrowed-from-oknil-unmanaged.good
assign-nonnil-borrowed-from-oknil-unmanaged.chpl:8: error: Cannot assign to borrowed MyClass from unmanaged MyClass?
assign-nonnil-borrowed-from-oknil-unmanaged.chpl:10: error: done
